--- a/yuvraj/node-express-hello-world/package.json
+++ b/yuvraj/node-express-hello-world/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "ejs": "^2.3.4",
     "express": "^4.13.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.1"
   }
 }
